--- a/editor/docs/changelog.txt
+++ b/editor/docs/changelog.txt
@@ -1,6 +1,8 @@
 2010-08-06 <bitnapper>
 - Read in Screen-Configuration from EDITOR.CFG
 - Menu-Bars are adjusted to screen size
+- Added some code from other editors for drawin of map
+- Added hard coded command definitions
 
 2010-08-05 <bitnapper>
 - Initial code with minimal menu and camera
