--- a/editor/docs/changelog.txt
+++ b/editor/docs/changelog.txt
@@ -1,3 +1,11 @@
+2010-08-09 <bitnapper>
+- File functions return a message string on error
+- Added menu "Settings" for display
+- Added drawing of textures
+- Changed division of Z-height on load 
+- Changed start position of camera (view looks a little bit distorted)
+- Added display od map in 2D
+
 2010-08-08 <bitnapper>
 - Added possible bounding of camera to an x/y extent
 - Better view position for camera
