--- a/editor/docs/changelog.txt
+++ b/editor/docs/changelog.txt
@@ -1,7 +1,12 @@
+2010-08-15 <bitnapper>
+- Added display of chosen Texture and it's part in 'Fan-Info'
+- Display of texture part has a bug :((
+
 2010-08-14 <bitnapper>
 - Added command 'B'rowsing trough fan types (displayed at chosen fan)
 - Added default fx-flags in fan types
 - Added display of name of chosen fan type in status bar
+- Prepared code for 'simple' mode for generation of maps
 
 2010-08-14 <bitnapper>
 - Added more data for 'fixed' fan sizes
