--- a/editor/docs/changelog.txt
+++ b/editor/docs/changelog.txt
@@ -1,3 +1,8 @@
+2010-08-17 <bitnapper>
+- Built Look-up-Tables for 'auto'-walls
+- Basic rewrite of code for setting auto-walls
+- Some reorganisation of data 
+
 2010-08-16 <bitnapper>
 - Moved menu points for load/save of map to 'File'-Menu
 - Added menu point for edit-state (how to edit)
