New map editor - Fixed rotation code and some cleanup

--- a/editor/docs/changelog.txt
+++ b/editor/docs/changelog.txt
@@ -2,6 +2,7 @@
 - Update of fan rotation code
 - Some Code-Reorganisation for automatic camera handling
 - Update of drawing code for camera in 2D
+- Fixef roation code and dide some code cleanup
 
 2010-08-19 <bitnapper>
 - Moved choosing fan type to 'editmain'
