--- a/editor/docs/changelog.txt
+++ b/editor/docs/changelog.txt
@@ -1,3 +1,6 @@
+2010-08-25 <bitnapper>
+- Added pattern data for wallmaker
+
 2010-08-24 <bitnapper>
 - Prepared to port the wallmaker-code from EgoMap
 - Added new module for wallmaker-code
