--- a/editor/docs/changelog.txt
+++ b/editor/docs/changelog.txt
@@ -1,3 +1,6 @@
+2010-08-27 <bitnapper>
+- Added simple base code for wallmaker
+
 2010-08-26 <bitnapper>
 - Added some more patterns for wallmaker
 
