--- a/editor/docs/changelog.txt
+++ b/editor/docs/changelog.txt
@@ -1,3 +1,9 @@
+2010-09-02 <bitnapper>
+- Bugfix in fan rotation code 
+- Added code for 'Free' edit mode
+- Bugfix in code for saving file
+- 'Free' edit mode now works!
+
 2010-09-01 <bitnapper>
 - Further coding for editing of mesh
 - Fan-Browsing is now active in 'Edit-Mode'
