New map editor - Added data and further code for wallmaker functionality - Arrow keys now move the camera, too - LEFT-SHIFT speeds up the camera movement, if pressed before arrow key - Completed the basic code for 'simple' mode, it's ready for testing

--- a/editor/docs/changelog.txt
+++ b/editor/docs/changelog.txt
@@ -1,7 +1,12 @@
+2010-09-11 <bitnapper>
+- Added data and further code for wallmaker functionality
+- Arrow keys now move the camera, too
+- LEFT-SHIFT speeds up the camera movement, if pressed before arrow key
+- Completed the basic code for 'simple' mode, it's ready for testing
+
 2010-09-09 <bitnapper>
 - Added code to read in spawn points and passages from file
-- Added code to draw spawn points and passages on map
-
+- Prepared code to draw spawn points and passages on map
 
 2010-09-08 <bitnapper>
 - Added code and struct definitions for later reading files 'SPAWN.TXT' and 'PASSAGE.TXT'
