--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,7 @@
 Credits to Penguinflyer5234, Seth, Khaos89 and Octagon this release!
-Version 2.8.0b (08.09.2010)
-- New Feature: Another rewrite of the Physics engine!
+Version 2.8.1 (??.??.2010)
+- Update: Complete rewrite of the Physics engine that fixed numerous physics issues.
+- Update: Complete rewrite of the Quest System. The quest system is much more stable and efficient now.
 - Update: Rust Eaters now get sick if they eat Kursed items.
 - Update: Homing particles will now try to target riders instead of their mounts.
 - Update: There is now an option in the Audio Menu to disable the sound of all footsteps.
